# Asset-Forge

./: .gitignore  README.md  install-dev-dependencies.cmd  install-dev-dependencies.ps1  launch-asset-forge.cmd  launch-asset-forge.ps1  package-lock.json  package.json
apps/desktop/: package.json
apps/desktop/src/: main.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
docs/: architecture-handoff.md  handoff-manifests.md  model-optimization-tool.md  model-orientation-tool.md  product-brief.md  tooling-checklist.md  trellis-batch-conversion.md  user-awareness-sync-plan.md
examples/sector-404/: cards.csv
presets/: black-ledger-orbit-small-craft-orientation.csv
refs/: agents.yaml  project.yaml
refs/UI/: uiStyle.yaml
refs/architecture/: boundaries.yaml
refs/handoffs/: currentHandoff.md  implementationLog.yaml
refs/implementation/: fileMap.yaml
refs/planning/: decisions.yaml  integrationMap.yaml  modules.yaml  roadmap.yaml  todos.yaml
refs/testing/: acceptanceCriteria.yaml  validationCommands.yaml
tools/: Convert-Trellis2Batch.ps1
