[package]
name = "asset-forge-desktop"
version = "0.1.0"
description = "Asset Forge desktop shell"
authors = ["SlothMD"]
edition = "2021"

[lib]
name = "asset_forge_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.25.10", default-features = false, features = ["jpeg", "png"] }
